Fixed more spacing issues with Cagegory and Recent Activity seciont of landing page

--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -14,7 +14,7 @@
   justify-content: center;
   align-items: center;
   max-width: 1224px;
-  padding: 0px 40px;
+  padding: 56px 0px;
   margin: 0px auto;
 }
 
@@ -40,7 +40,7 @@
   justify-content: center;
   align-items: center;
   max-width: 1224px;
-  padding: 0px 40px;
+  padding: 48px 0px;
   margin: 0px auto;
 }
 
